fix: CCTV 조회 및 코드 생성 안정화